--- a/grails-app/assets/javascripts/streama/templates/player.tpl.htm
+++ b/grails-app/assets/javascripts/streama/templates/player.tpl.htm
@@ -1,4 +1,5 @@
 <div class="player-wrapper">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <streama-video-player
     options="videoOptions"
     ng-if="videoOptions.videoSrc">
