--- a/grails-app/assets/javascripts/streama/templates/directive--streama-video-image.tpl.htm
+++ b/grails-app/assets/javascripts/streama/templates/directive--streama-video-image.tpl.htm
@@ -1,4 +1,4 @@
-<img<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>ng-if="video[type + '_image_src']" ng-src="{{::video[type + '_image_src']}}"/>
+<img ng-if="video[type + '_image_src']" ng-src="{{::video[type + '_image_src']}}"/>
 <img ng-if="!video[type + '_image_src'] && video[type + '_path']"
      ng-src="https://image.tmdb.org/t/p/w{{size}}/{{::video[type + '_path']}}"/>
 <img ng-if="!video[type + '_path'] && !video[type + '_image_src']"
