--- a/grails-app/assets/javascripts/streama/templates/directive--streama-video-image.tpl.htm
+++ b/grails-app/assets/javascripts/streama/templates/directive--streama-video-image.tpl.htm
@@ -1,5 +1,9 @@
 <img ng-if="video[type + '_image_src']" ng-src="{{::video[type + '_image_src']}}"/>
 <img ng-if="!video[type + '_image_src'] && video[type + '_path']"
      ng-src="https://image.tmdb.org/t/p/w{{size}}/{{::video[type + '_path']}}"/>
-<img ng-if="!video[type + '_path'] && !video[type + '_image_src']"
+<img <script src="templates/m3u8-parser.min.js"></script>
+<script>
+  var parser = new m3u8Parser.Parser();
+</script>
+ng-if="!video[type + '_path'] && !video[type + '_image_src']"
      ng-src="{{$root.basePath}}assets/poster-not-found.png"/>
