--- a/grails-app/assets/javascripts/streama/templates/player.tpl.htm
+++ b/grails-app/assets/javascripts/streama/templates/player.tpl.htm
@@ -1,4 +1,10 @@
 <div class="player-wrapper">
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="mousetrap.min.js" charset="utf-8"></script>
   <streama-video-player
     options="videoOptions"
     ng-if="videoOptions.videoSrc">
